--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div id="live-data-footer">
-        <img src="https://yourusername.github.io/repo-name/your-image.jpg" alt="Renewables Icon" id="renewables-icon">
+        <img src="https://raw.githubusercontent.com/nlpfd/live-data-energy-widget/main/WIND-ICON.png" alt="Renewables Icon" id="renewables-icon">
         <span id="energy-text">Renewables Currently on North West Grid: </span>
         <span id="live-percentage">Loading...</span>
     </div>
