--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- Trigger rebuild -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,14 +35,24 @@
             fetch('https://api.carbonintensity.org.uk/regional/regionid/13')
             .then(response => response.json())
             .then(data => {
-                const region = data.data[0];
-                const wind = region.generationmix.find(item => item.fuel === 'wind').perc || 0;
-                const solar = region.generationmix.find(item => item.fuel === 'solar').perc || 0;
-                const combinedRenewables = Math.round(wind + solar);
-                document.getElementById('live-percentage').textContent = combinedRenewables + "%";
+                console.log(data);  // Log the full API response to the console
+                const region = data.data[0];  // Ensure you're accessing the correct data
+                console.log(region);  // Log the region data
+
+                // Proceed only if 'generationmix' exists
+                if (region.generationmix) {
+                    const wind = region.generationmix.find(item => item.fuel === 'wind').perc || 0;
+                    const solar = region.generationmix.find(item => item.fuel === 'solar').perc || 0;
+                    const combinedRenewables = Math.round(wind + solar);
+                    document.getElementById('live-percentage').textContent = combinedRenewables + "%";
+                } else {
+                    console.error('generationmix not found in the region data.');
+                    document.getElementById('live-percentage').textContent = "Data not available";
+                }
             })
             .catch(error => console.error('Error fetching data:', error));
         }
+
         window.onload = fetchLiveData;
     </script>
 </body>
