--- a/index.html
+++ b/index.html
@@ -1,59 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Data Widget</title>
-    <style>
-        #live-data-footer {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 10px;
-            background-color: #333;
-            color: white;
-        }
-        #renewables-icon {
-            width: 24px;
-            margin-right: 10px;
-        }
-        #live-percentage {
-            font-weight: bold;
-            font-size: 18px;
-        }
-    </style>
-</head>
-<body>
-    <div id="live-data-footer">
-        <img src="https://raw.githubusercontent.com/nlpfd/live-data-energy-widget/main/WIND-ICON.png" alt="Renewables Icon" id="renewables-icon">
-        <span id="energy-text">Renewables Currently on North West Grid: </span>
-        <span id="live-percentage">Loading...</span>
-    </div>
-
-    <script>
-        function fetchLiveData() {
-            fetch('https://api.carbonintensity.org.uk/regional/regionid/13')
-            .then(response => response.json())
-            .then(data => {
-                console.log(data);  // Log the full API response to the console
-                const region = data.data[0];  // Ensure you're accessing the correct data
-                console.log(region);  // Log the region data
-
-                // Proceed only if 'generationmix' exists
-                if (region.generationmix) {
-                    const wind = region.generationmix.find(item => item.fuel === 'wind').perc || 0;
-                    const solar = region.generationmix.find(item => item.fuel === 'solar').perc || 0;
-                    const combinedRenewables = Math.round(wind + solar);
-                    document.getElementById('live-percentage').textContent = combinedRenewables + "%";
-                } else {
-                    console.error('generationmix not found in the region data.');
-                    document.getElementById('live-percentage').textContent = "Data not available";
-                }
-            })
-            .catch(error => console.error('Error fetching data:', error));
-        }
-
-        window.onload = fetchLiveData;
-    </script>
-</body>
-</html>
+<script>
+    function fetchLiveData() {
+        fetch('https://api.carbonintensity.org.uk/regional/regionid/13')
+        .then(response => response.json())
+        .then(data => {
+            console.log('API Response:', data); // This logs the full response
+            const region = data.data[0];
+            if (!region || !region.generationmix) {
+                console.error('Generation mix data not available');
+                document.getElementById('live-percentage').textContent = 'Data unavailable';
+                return;
+            }
+            const wind = region.generationmix.find(item => item.fuel === 'wind')?.perc || 0;
+            const solar = region.generationmix.find(item => item.fuel === 'solar')?.perc || 0;
+            const combinedRenewables = Math.round(wind + solar);
+            document.getElementById('live-percentage').textContent = combinedRenewables + "%";
+        })
+        .catch(error => console.error('Error fetching data:', error));
+    }
+    window.onload = fetchLiveData;
+</script>
