--- a/index.html
+++ b/index.html
@@ -30,40 +30,45 @@
         <span id="live-percentage">Loading...</span>
     </div>
 
-    <!-- Move the script to the bottom to ensure all elements are loaded -->
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            function fetchLiveData() {
-                fetch('https://api.carbonintensity.org.uk/regional')
-                .then(response => response.json())
-                .then(data => {
-                    console.log('Full API Response:', data); // Log the full response
+        function fetchLiveData() {
+            // Optional: Use a CORS proxy if encountering issues
+            // Uncomment the below line to use a proxy if CORS is an issue
+            // const apiUrl = 'https://cors-anywhere.herokuapp.com/https://api.carbonintensity.org.uk/regional';
 
-                    // Filter for North West England using the 'shortname' field
-                    const region = data.data[0].regions.find(r => r.shortname === "North West England");
-                    if (!region || !region.generationmix) {
-                        console.error('Generation mix data not available for North West England');
-                        document.getElementById('live-percentage').textContent = 'Data unavailable';
-                        return;
-                    }
+            // Standard API URL
+            const apiUrl = 'https://api.carbonintensity.org.uk/regional';
 
-                    // Extract wind and solar percentages from the generation mix
-                    const wind = region.generationmix.find(item => item.fuel === 'wind')?.perc || 0;
-                    const solar = region.generationmix.find(item => item.fuel === 'solar')?.perc || 0;
-                    const combinedRenewables = Math.round(wind + solar);
+            fetch(apiUrl)
+            .then(response => response.json())
+            .then(data => {
+                // Log the full API response to debug on GitHub Pages
+                console.log('API Response on GitHub Pages:', JSON.stringify(data, null, 2));
 
-                    // Update the text with the combined renewable percentage
-                    document.getElementById('live-percentage').textContent = combinedRenewables + "%";
-                })
-                .catch(error => {
-                    console.error('Error fetching data:', error);
-                    document.getElementById('live-percentage').textContent = 'Error fetching data';
-                });
-            }
+                // Filter for North West England using the 'shortname' field
+                const region = data.data[0].regions.find(r => r.shortname === "North West England");
+                if (!region || !region.generationmix) {
+                    console.error('Generation mix data not available for North West England');
+                    document.getElementById('live-percentage').textContent = 'Data unavailable';
+                    return;
+                }
 
-            // Fetch data when the page has fully loaded
-            fetchLiveData();
-        });
+                // Extract wind and solar percentages from the generation mix
+                const wind = region.generationmix.find(item => item.fuel === 'wind')?.perc || 0;
+                const solar = region.generationmix.find(item => item.fuel === 'solar')?.perc || 0;
+                const combinedRenewables = Math.round(wind + solar);
+
+                // Update the text with the combined renewable percentage
+                document.getElementById('live-percentage').textContent = combinedRenewables + "%";
+            })
+            .catch(error => {
+                console.error('Error fetching data:', error);
+                document.getElementById('live-percentage').textContent = 'Error fetching data';
+            });
+        }
+
+        // Fetch data when the page loads
+        window.onload = fetchLiveData;
     </script>
 </body>
 </html>
